# me-gpt

./: .gitignore  AGENTS.md  INSTALL.md  QUICKSTART.md  README.md  docker-compose.dev.yml  pyproject.toml
agent/: __init__.py  cli.py  config.py  session.py
agent/providers/: __init__.py  anthropic.py  base.py  http_adapter.py  openai.py
dev/: config.example.yaml
dev/mock_mcp/: Dockerfile  __init__.py  requirements.txt  server.py
tests/: test_config.py  test_providers.py  test_session.py
