[tool.poetry]
name = "me-gpt"
version = "0.1.0"
description = "A minimal LLM agent CLI for OpenAI, Anthropic, and containerized MCP servers"
authors = ["Mitchell Rust <mitchellrust@gmail.com>"]
readme = "README.md"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.14"
typer = "^0.23.1"
httpx = "^0.28.1"
pydantic = "^2.12.5"
pyyaml = "^6.0.3"
rich = "^14.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
respx = "^0.22.0"
black = "^26.1.0"
ruff = "^0.15.1"

[tool.poetry.scripts]
agent = "agent.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
